--- a/MyApp/Resources/app_config.json
+++ b/MyApp/Resources/app_config.json
@@ -5,5 +5,14 @@
                 "导演",
                 "天王"
         ],
+    "allAction": [
+            "精选",
+            "动作",
+            "喜剧",
+            "爱情",
+            "科幻",
+            "恐怖",
+            "纪录片"
+    ],
     "value":"https://i.ifeng.com"
 }
